--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,26 @@
   justify-content: center;
 }
 
+.FormContainer{
+  display: flex;
+  justify-content: center;
+}
+
 .Menu {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.Modal-Show {
+  background-color: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.Modal-Hide {
+  display: none;
 }
 
 .Teams {
