--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,11 @@
 }
 
 .Modal-Show {
-  background-color: white;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-.Modal-Hide {
-  display: none;
 }
 
 .Teams {
