--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,32 @@
 .Header {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  margin-bottom: 50 px;
+}
+
+#nbaLogo{
+  width: 50px;
+  height: max-height;
 }
 
 .FormContainer{
   display: flex;
   justify-content: center;
+  margin: 50px;
 }
 
 .Menu {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .Modal-Show {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
 
 }
@@ -34,4 +44,6 @@
 
 }
 
-
+ul {
+  text-align: left;
+}
